finished my section

--- a/style.css
+++ b/style.css
@@ -83,3 +83,19 @@ ul {
 }
 
 /* header end */
+
+.main__section1 {
+    
+}
+.main__section2 {
+    
+}
+.main__section3 {
+    
+}
+.main__section4 {
+    
+}
+.main__section5 {
+    
+}
